--- a/src/frontend/html/home.html
+++ b/src/frontend/html/home.html
@@ -91,7 +91,7 @@
         </div>  
     </section>
 
-    <script src="../../script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
 
