--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" href="../../frontend/css/home.css">
+    <link rel="stylesheet" href="../frontend/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Jersey+10+Charted&family=Jersey+15&display=swap" rel="stylesheet">
@@ -56,13 +56,13 @@
                 logika matematika mereka melalui pengalaman interaktif.</p>
         </div>
         <div class="general-image">
-            <img src="../../../img/general.jpg" alt="General Image">
+            <img src="../../img/general.jpg" alt="General Image">
         </div>
     </section>
 
     <section id="math">
         <div class="math-image">
-            <img src="../../../img/math.jpg" alt="Math Image">
+            <img src="../../img/math.jpg" alt="Math Image">
         </div>
         <div class="math-container">
             <h2>Math</h2>
@@ -91,7 +91,7 @@
         </div>  
     </section>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
