--- a/src/frontend/simulation.html
+++ b/src/frontend/simulation.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" href="../../frontend/css/simulation.css">
+    <link rel="stylesheet" href="../frontend/style/simulation.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Jersey+10+Charted&family=Jersey+15&display=swap" rel="stylesheet">
     <!-- js -->
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
     <title>Graphlung Virtual Lab - Simulation</title>
 </head>
 <body>
