refactor: rev directory

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" href="../frontend/style/style.css">
+    <link rel="stylesheet" href="src/frontend/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Jersey+10+Charted&family=Jersey+15&display=swap" rel="stylesheet">
@@ -18,15 +18,15 @@
             <div class="hamburger" onclick="toggleMenu()">☰</div>
             <ul class="nav-links" id="nav-links">
                 <li class="dropdown">
-                    <a href="home.html">HOME</a>
+                    <a href="index.html">HOME</a>
                     <ul class="dropdown-content">
-                        <li><a href="home.html#general">General</a></li>
-                        <li><a href="home.html#math">Math</a></li>
-                        <li><a href="home.html#graph">Graph</a></li>
+                        <li><a href="index.html#general">General</a></li>
+                        <li><a href="index.html#math">Math</a></li>
+                        <li><a href="index.html#graph">Graph</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="simulation.html">SIMULATION</a>
+                    <a href="src/frontend/simulation.html">SIMULATION</a>
                     <ul class="dropdown-content">
                         <li><a href="simulation.html#cubic">Cubic</a></li>
                         <li><a href="simulation.html#sinus">Sinus</a></li>
@@ -56,13 +56,13 @@
                 logika matematika mereka melalui pengalaman interaktif.</p>
         </div>
         <div class="general-image">
-            <img src="../../img/general.jpg" alt="General Image">
+            <img src="src/assets/general.jpg" alt="General Image">
         </div>
     </section>
 
     <section id="math">
         <div class="math-image">
-            <img src="../../img/math.jpg" alt="Math Image">
+            <img src="src/assets/math.jpg" alt="Math Image">
         </div>
         <div class="math-container">
             <h2>Math</h2>
@@ -87,11 +87,11 @@
                 memahami sifat-sifat khusus dari setiap jenis persamaan dan grafik yang dihasilkannya.</p>
         </div>
         <div class="graph-image">
-            <img src="../../../img/graph.jpg" alt="Graph Image">
+            <img src="src/assets/graph.jpg" alt="Graph Image">
         </div>  
     </section>
 
-    <script src="script.js"></script>
+    <script src="src/frontend/script.js"></script>
 </body>
 </html>
 
