--- a/src/frontend/simulation.html
+++ b/src/frontend/simulation.html
@@ -19,11 +19,11 @@
             <div class="hamburger" onclick="toggleMenu()">☰</div>
             <ul class="nav-links" id="nav-links">
                 <li class="dropdown">
-                    <a href="home.html">HOME</a>
+                    <a href="../../index.html">HOME</a>
                     <ul class="dropdown-content">
-                        <li><a href="home.html#general">General</a></li>
-                        <li><a href="home.html#math">Math</a></li>
-                        <li><a href="home.html#graph">Graph</a></li>
+                        <li><a href="index.html#general">General</a></li>
+                        <li><a href="index.html#math">Math</a></li>
+                        <li><a href="index.html#graph">Graph</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
