refactor: rev href

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <li class="dropdown">
                     <a href="src/frontend/simulation.html">SIMULATION</a>
                     <ul class="dropdown-content">
-                        <li><a href="simulation.html#cubic">Cubic</a></li>
-                        <li><a href="simulation.html#sinus">Sinus</a></li>
-                        <li><a href="simulation.html#cosinus">Cosinus</a></li>
-                        <li><a href="simulation.html#tangen">Tangen</a></li>
+                        <li><a href="src/frontend/simulation.html#cubic">Cubic</a></li>
+                        <li><a href="src/frontend/simulation.html#sinus">Sinus</a></li>
+                        <li><a href="src/frontend/simulation.html#cosinus">Cosinus</a></li>
+                        <li><a href="src/frontend/simulation.html#tangen">Tangen</a></li>
                     </ul>
                 </li>
             </ul>
