--- a/src/frontend/simulation.html
+++ b/src/frontend/simulation.html
@@ -21,9 +21,9 @@
                 <li class="dropdown">
                     <a href="../../index.html">HOME</a>
                     <ul class="dropdown-content">
-                        <li><a href="index.html#general">General</a></li>
-                        <li><a href="index.html#math">Math</a></li>
-                        <li><a href="index.html#graph">Graph</a></li>
+                        <li><a href="../../index.html#general">General</a></li>
+                        <li><a href="../../index.html#math">Math</a></li>
+                        <li><a href="../../index.html#graph">Graph</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
